[gd_scene load_steps=4 format=3 uid="uid://cpvp6sfoxqigr"]

[ext_resource type="Texture2D" uid="uid://cik6lp2p4pmen" path="res://addons/graph_dialog_system/icons/DistractionFree.svg" id="1_y1smc"]
[ext_resource type="Script" path="res://addons/graph_dialog_system/nodes/components/dialogue_text_box.gd" id="1_ytunx"]
[ext_resource type="CodeHighlighter" uid="uid://dfy2njb4ljtel" path="res://addons/graph_dialog_system/nodes/components/code_highlighter.tres" id="2_p55sv"]

[node name="DialogueTextBox" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ytunx")

[node name="DialogueInput" type="TextEdit" parent="."]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Insert text..."
wrap_mode = 1
syntax_highlighter = ExtResource("2_p55sv")
highlight_all_occurrences = true

[node name="ExpandButton" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("1_y1smc")

[node name="ExpandedTextPanel" type="PopupPanel" parent="."]
title = "Edit Text"
initial_position = 1
size = Vector2i(800, 600)

[node name="VBoxContainer" type="VBoxContainer" parent="ExpandedTextPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 596.0

[node name="ExpandedInput" type="TextEdit" parent="ExpandedTextPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1
syntax_highlighter = ExtResource("2_p55sv")
highlight_all_occurrences = true

[node name="CenterContainer" type="CenterContainer" parent="ExpandedTextPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="ExpandedTextPanel/VBoxContainer/CenterContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="ExpandButton" to="." method="_on_expand_button_pressed"]
[connection signal="pressed" from="ExpandedTextPanel/VBoxContainer/CenterContainer/CloseButton" to="." method="_on_expanded_close_button_pressed"]
